--- a/course/MDS_spraakmodeller_for_alle.ipynb
+++ b/course/MDS_spraakmodeller_for_alle.ipynb
@@ -155,7 +155,6 @@
    "outputs": [],
    "source": [
     "# Connect through the API\n",
-    "#!pip install devtools\n",
     "from langchain_openai import AzureChatOpenAI \n",
     "from dotenv import find_dotenv, load_dotenv \n",
     "from devtools import pprint # Pretty output\n",
@@ -596,8 +595,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Literal\n",
-    "\n",
     "categorize_prompt = PromptTemplate.from_template(            #Notice that we no longer pass the list of categories with the prompt.\n",
     "\"\"\"\n",
     "Categorize the following feedback into the provided categories. \n",
@@ -654,7 +651,7 @@
    "metadata": {},
    "source": [
     "# Prøv selv\n",
-    "Nå kan du øve deg på å jobbe med pydantic som en del av LCEL-kjeden. Prøv å \n",
+    "Nå kan du øve deg på å jobbe med Pydantic som en del av LCEL-kjeden. Prøv å \n",
     "\n",
     "1. Lag en literal med nye kategorier\n",
     "2. Inkorporer den i en klasse som bruker BaseModel\n",
@@ -669,9 +666,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4254113457.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_148540/4254113457.py\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    ]\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "TEST_CATEGORIES = Literal[\n",
     "    #.....\n",
@@ -742,7 +748,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Vi minner om\n",
     "categorize_prompt = PromptTemplate.from_template(            #Notice that we no longer pass the list of categories with the prompt.\n",
     "\"\"\"\n",
     "Categorize the following feedback into the provided categories. \n",
@@ -754,11 +759,10 @@
     "\"\"\"\n",
     ")\n",
     "\n",
-    "# CoT\n",
     "class CategorizeCot(BaseModel):\n",
     "    \"Categorization of a single feedback entry from an IT survey.\"\n",
     "    chain_of_thought: str = Field(\n",
-    "        description=\"Use this space to think through the categorization.\"  # We have defined a variable that explicitly asks the model to think in chain-of-thought\n",
+    "        description=\"Use this space to think through the categorization.\"  # We have defined a variable that explicitly asks the model to think through its response.\n",
     "    )\n",
     "    category: CATEGORIES = Field(\n",
     "        description=\"Chosen category for the feedback. Choose 'Other' if the other categories provided are not a good fit.\"  \n",
@@ -834,10 +838,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example\n",
-    "\n",
     "prompt = PromptTemplate.from_template(\"\"\"\n",
-    "A rope ladder hangs over the side of a boat. The rungs are 30 cm apart. The tide rises 1 meter every hour. After 3 hours, how many rungs will be underwater?\n",
+    "A rope ladder hangs over the side of a boat. \n",
+    "The rungs are 30 cm apart. The tide rises 1 meter every hour. \n",
+    "After 3 hours, how many rungs will be underwater?\n",
     "\"\"\")\n",
     "\n",
     "reasoning_chain = prompt | reasoning_llm | StrOutputParser()\n",
@@ -926,8 +930,10 @@
    "source": [
     "categories_for_others_prompt = PromptTemplate.from_template(\n",
     "\"\"\"\n",
-    "Give me a list of categories that best summarizes the following feedback. I need to be able to put each one of the feedbacks into a category.\n",
-    "Provide a maximum of 3 categories. Please provide clear, precise, and short categories with no '&' or 'and'.\n",
+    "Give me a list of categories that best summarizes the following feedback. \n",
+    "I need to be able to put each one of the feedbacks into a category.\n",
+    "Provide a maximum of 3 categories. \n",
+    "Please provide clear, precise, and short categories with no '&' or 'and'.\n",
     " \n",
     "Feedback:\n",
     "<feedback>\n",
@@ -1015,13 +1021,14 @@
     "# Retrieve indexes for all rows where AI classification = \"Other\"\n",
     "other_indices = df[df['AI Classification'] == \"Other\"].index\n",
     " \n",
-    " \n",
+    "# Prompts model to categorize each feedback that previously ended up in the \"Other\" category.\n",
     "result_batch = categorize_chain_others.batch(\n",
     "    [\n",
     "    {\"feedback\": feedback} for feedback in df.loc[other_indices, \"Feedback\"]\n",
     "    ]\n",
     ")\n",
     " \n",
+    "# Updates the dataframe with the new categories\n",
     "df.loc[other_indices, \"AI Classification\"] = [result.category for result in result_batch]"
    ]
   },
@@ -1056,16 +1063,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import Markdown, display #Nice display of output\n",
+    "\n",
     "# 1. Prompt Template\n",
     "summary_prompt = PromptTemplate.from_template(\"\"\"\n",
-    "You are a domain expert in internal IT operations and organizational analysis. You will be provided with a dataset containing qualitative feedback from employees in an IT company. \n",
+    "You are a domain expert in internal IT operations and organizational analysis. \n",
+    "You will be provided with a dataset containing qualitative feedback from employees in an IT company. \n",
     "Each row in the dataset represents a feedback entry and is associated with a specific category.\n",
     "\n",
     "For each category, carefully:\n",
     "1. Read and interpret the feedback entries assigned to that category.\n",
     "2. Identify core themes, recurring patterns, and contrasting opinions within that category.\n",
-    "3. Evaluate the feedback logically: What are the likely underlying causes of recurring issues or praises? Are there signs of systemic problems, isolated incidents, or misaligned expectations?\n",
-    "4. Summarize each category in 3 to 6 bullet points, highlighting key sentiments (positive and negative), representative concerns or compliments, and any significant outliers\n",
+    "3. Evaluate the feedback logically: What are the likely underlying causes of recurring issues or praises? \n",
+    "   Are there signs of systemic problems, isolated incidents, or misaligned expectations?\n",
+    "4. Summarize each category in 3 to 6 bullet points, highlighting key sentiments (positive and negative), \n",
+    "   representative concerns or compliments, and any significant outliers\n",
     "\n",
     "Present your findings in a clean, professional way with one section per category. \n",
     "\n",
