--- a/course/MDS_spraakmodeller_for_alle.ipynb
+++ b/course/MDS_spraakmodeller_for_alle.ipynb
@@ -1111,7 +1111,7 @@
    "metadata": {},
    "source": [
     "## Fantastisk!\n",
-    "Du har nå fullført kurset LLM for alle, og jobbet deg gjennom hvordan du kan koble deg til språkmodeller via API-er, hvordan du kan skrive LCEL for å lage gjenbrukbare prompt-maler og AI-kjeder, hvordan du kan sikre presise svar med structured output og sett på oppgaver der det kan være nyttig å bruke en resonneringsmodell fremfor en vanlig språkmodell."
+    "Du har nå fullført workshoppen *Språkmodeller for alle*, og jobbet deg gjennom hvordan du kan koble deg til språkmodeller via API-er, hvordan du kan skrive LCEL for å lage gjenbrukbare prompt-maler og AI-kjeder, hvordan du kan sikre presise svar med structured output og sett på oppgaver der det kan være nyttig å bruke en resonneringsmodell fremfor en vanlig språkmodell."
    ]
   },
   {
